# do_i_need_to_upgrade

./: .pydoctest.json  CHANGELOG.md  Makefile  README.md  mkdocs.yml  private_dictionary.txt  pyproject.toml  tox.ini
.github/workflows/: release.yml  tox.yml  zizmor.yml
do_i_need_to_upgrade/: __about__.py  __init__.py  __main__.py  api.py  audit.py  background.py  cache.py  cli.py  host.py  install_method.py  installed.py  integrate.py  integrity_check.py  pypi.py  report.py  resolvers.py  settings.py  upgrade.py
docs/: installation.md
docs/extending/: CONTRIBUTING.md
docs/overview/: README.md
docs/usage/: quickstart.md  vendoring.md
scripts/: basic_checks.sh  build_lite.py  redo_release.sh
spec/: HOW_TO_USE_FOR_LLMS.md  phase-2-check-other-apps.md  phase-3-integration.md  phase-4-vendoring-lite.md  tkinter_component.md
tests/: test_cache.py  test_check_targets.py  test_cli.py  test_host.py  test_installed.py  test_integrate.py  test_lite.py  test_pypi.py  test_report.py  test_resolvers.py  test_settings.py
