[project]
name = "do_i_need_to_upgrade"
version = "0.1.0"
description = "Drop-in application self-upgrade checker and vulnerability auditor"
readme = "README.md"
authors = [{ name = "Matthew Martin", email = "matthewdeanmartin@gmail.com" }]
keywords = ["do_i_need_to_upgrade", "upgrade", "self-update", "pypi", "update-checker"]
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
]
dependencies = [
    "packaging>=23.0",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.urls]
Repository = "https://github.com/matthewdeanmartin/do_i_need_to_upgrade"
Documentation = "https://do_i_need_to_upgrade.readthedocs.io/en/latest/"
Changelog = "https://github.com/matthewdeanmartin/do_i_need_to_upgrade/blob/main/CHANGELOG.md"
homepage = "https://github.com/matthewdeanmartin/do_i_need_to_upgrade"
issues = "https://github.com/matthewdeanmartin/do_i_need_to_upgrade/issues/"

[project.scripts]
do_i_need_to_upgrade = "do_i_need_to_upgrade.cli:main"
diu = "do_i_need_to_upgrade.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["do_i_need_to_upgrade"]
include = [
    "do_i_need_to_upgrade/**/*.py",
    "do_i_need_to_upgrade/py.typed",
    "/README.md",
    "LICENSE",
]

[tool.hatch.build.targets.sdist]
include = ["/README.md", "LICENSE", "/do_i_need_to_upgrade", "/tests"]

[dependency-groups]
dev = [
    "urllib3>=2.7.0; python_version >= '3.10'",
    # "urllib3>=2.7.0; python_version >= '3.11'",
    # "urllib3; python_version <= '3.11'",
    "bandit>=1.9.4; python_version >= '3.11'",
    "black>=26.0.0; python_version >= '3.11'",
    "isort>=6.0.0; python_version >= '3.11'",
    "jiggle-version>=2.1.0; python_version >= '3.11'",
    "keepachangelog-manager-fork[all]>=6.6.0; python_version < '3.15'",
    "codespell>=2.4.1; python_version >= '3.11'",
    "mdformat>=1.0.0; python_version >= '3.11'",
    "metametameta>=0.1.5; python_version >= '3.11'",
    "mypy>=1.18.0",
    "pylint[spelling]>=4.0.0; python_version >= '3.10'",
    "pytest>=8.4.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-randomly>=3.15.0",
    "pytest-sugar>=0.9.7",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.4.0",
    "hypothesis>=6.100.0",
    "ruff>=0.12.0",
    "pre-commit>=4.0.0",
    "pip-audit>=2.7.0; python_version >= '3.11'",
    "tox>=4.0",
    "tox-uv>=1.0",
    "gha-update>=0.1.0; python_version >= '3.12'",
    "pyyaml>=6.0",
    "yamlfix>=1.19.0; python_version >= '3.10'",
    "interrogate>=1.5.0",
    "linkcheckmd>=1.4.0",
    "pyenchant>=3.2.2",
    "mkdocs>=1.6.0",
    "mkdocstrings[python]>=0.26.0",
    "git2md>=0.1.0; python_version >= '3.11'",
    "pyclean>=3.0.0",
    "vulture>=2.11; python_version >= '3.11'",
    "deadcode>=2.4.0; python_version >= '3.11'",
    "griffe>=1.0.0; python_version >= '3.11'",
    "pydoclint>=0.8.0; python_version >= '3.11'",
    "pydoctest==0.2.1",
    "refurb>=2.0.0; python_version >= '3.11'",
    "crosshair-tool>=0.0.80",
    "deptry>=0.20.0; python_version >= '3.11'",
    "import-linter>=2.0; python_version < '3.15'",
    "packaging>=23.0",
]
release = [
    "troml-dev-status>=0.6.0; python_version >= '3.11'",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = "-q --timeout=60"
norecursedirs = ["vendor", "scripts", "dist", "build"]
markers = [
    "slow: performance benchmarks (run with -m slow)",
    "integration: integration tests (run with -m integration)",
]
junit_family = "xunit1"

[tool.black]
line-length = 120
target-version = ["py39"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 120
py_version = 310
skip_gitignore = true

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["do_i_need_to_upgrade", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false

# tomllib is stdlib from 3.11; settings.py falls back to tomli on 3.10.
[[tool.mypy.overrides]]
module = "tomllib"
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "UP",
    "SIM",
    "RUF",
    "W",
]
ignore = [
    "E501",
    "UP045", # need 39 support
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["B011", "S101"]
"do_i_need_to_upgrade/__about__.py" = ["RUF022"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "except ImportError",
    "except ModuleNotFoundError",
    "if 0:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]

[tool.importlinter]
root_packages = ["do_i_need_to_upgrade"]

[tool.changelogmanager.versioning]
scheme = "semver"

[tool.changelogmanager.validation]
enforce_preamble = true
format = "auto"

[tool.changelogmanager.defaults]
error_format = "github"
commit_schema = "keepachangelog"
schema_version = "current"

[[tool.changelogmanager.components]]
name = "default"
changelog = "CHANGELOG.md"
